# juhradial-mx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  install.sh  juhradial-mx.desktop  juhradial-mx.sh  org.juhlabs.JuhRadialMX.metainfo.xml  org.kde.juhradialmx.settings.desktop
daemon/: Cargo.toml
daemon/src/: battery.rs  config.rs  cursor.rs  dbus.rs  evdev.rs  hidpp.rs  hidraw.rs  lib.rs  main.rs
overlay/: flow.py  juhradial-overlay.py  settings_dashboard.py  settings_dialogs.py  settings_page_buttons.py  settings_page_devices.py  settings_page_easyswitch.py  settings_page_haptics.py  settings_page_scroll.py  settings_page_settings.py  settings_widgets.py  themes.py
packaging/: logid.cfg
packaging/arch/: PKGBUILD
packaging/systemd/: juhradialmx-daemon.service
packaging/udev/: 99-juhradialmx.rules
